# Backend

./: .gitignore  README.md  access_control.db  pyproject.toml
app/: database.py  main.py
app/api/: router.py
app/api/routes/: access.py  aibox_mock.py  auth.py  face.py  health.py  history.py  ocr.py  tickets.py
app/core/: auth_context.py  cache.py  config.py  files.py  security.py  status.py  time.py
app/services/: access_service.py  face_service.py  ocr_service.py  ticket_renderer.py
gfl_core/app/: ocr_service.py  verify_face.py
gfl_core/models/layout/: __init__.py  label_mapping.py  onnx_predictor.py  options.py  processor.py  transformers_predictor.py
gfl_core/tests/: test_extract_id.py
gfl_core/utils/: color_map.py  image_utils.py  layout_postprocess_utils.py
