[project]
name = "ocr-fastapi-test"
version = "0.2.0"
description = "FastAPI PoC for CCCD OCR, access sessions, face comparison, tickets, QR/barcode and history."
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    "pillow>=10.0.0",
    "numpy>=1.24.0,<2.0.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "opencv-python>=4.8.0",
    "pydantic>=2.0.0",
    "loguru>=0.7.0",
    "tqdm>=4.66.0",
    "psutil==5.9.8",
    "tzdata>=2024.1",
    "huggingface-hub>=0.23.0",
    "onnxruntime>=1.16.0",
    "transformers>=4.40.0",
    "vietocr>=0.3.13",
    "pyyaml>=6.0.0",
    "qrcode[pil]>=7.4.2",
    "insightface>=0.7.3",
    "python-barcode>=0.15.1",
]

[tool.uv]
package = false

[tool.uv.sources]
# No custom sources. All dependencies are resolved from PyPI by `uv sync`.
